# OpenCL-Development-Real-time-Image-Processing

./: .gitignore  CMakeLists.txt  README.md  pip_requirements.txt
.github/workflows/: ci.yml  release.yml
Documentation/Manuals/: PoCL_Installation.md
Documentation/Project Plan/drawio/: .$Methodology overview.drawio.bkp  Methodology overview.drawio
Documentation/Project Plan/tables/: Table_of_Deliverables.tgn  Table_of_Hardware_Components.tgn  Table_of_Implementation_Specifics.tgn  Table_of_Software_Components.tgn  Table_of_Sprint_Backlog.tgn  Table_of_Technical_Considerations.tgn
Documentation/Research Report/Planning/: Gaussian_Blur.md  Grayscale.md  Sobel_Edge_Detection.md
Documentation/Resources/: Sprint Timeline.xlsx
Documentation/Resources/drawio/: OpenCL Index space.drawio  Project Workflow.drawio
include/: CLProgramHandler.hpp  Comparator.hpp  Controller.hpp  FileHandler.hpp  InfoPlatform.hpp  Logger.hpp  ProgramHandler.hpp
src/: CMakeLists.txt
src/CameraModule/: CMakeLists.txt  CameraModule.cpp
src/EdgeDetection/: CMakeLists.txt  EdgeDetection.cpp
src/EdgeDetection/include/: Controller.hpp
src/EdgeDetection/kernel/: edge_base.cl  sobel_edge.cl
src/EdgeDetection/results/: Linux_100_Artemis_sorted_results.csv  Linux_100_Tulips_sorted_results.csv  Linux_10_Artemis_sorted_results.csv  Linux_10_Tulips_sorted_results.csv  Linux_5_Artemis_sorted_results.csv  Linux_5_Tulips_sorted_results.csv  Windows_100_Artemis_sorted_results.csv  Windows_100_Tulips_sorted_results.csv  Windows_10_Artemis_sorted_results.csv  Windows_10_Tulips_sorted_results.csv  Windows_5_Artemis_sorted_results.csv  Windows_5_Tulips_sorted_results.csv  visualisation.py
src/EdgeDetection/src/: Controller.cpp  InfoPlatform.cpp
src/GaussianBlur/: CMakeLists.txt  GaussianBlur.cpp
src/GaussianBlur/include/: Controller.hpp
src/GaussianBlur/kernel/: gaussian_base.cl  gaussian_blur.cl  gaussian_images.cl
src/GaussianBlur/results/: Linux_100_Artemis_sorted_results.csv  Linux_100_Tulips_sorted_results.csv  Linux_10_Artemis_sorted_results.csv  Linux_10_Tulips_sorted_results.csv  Linux_5_Artemis_sorted_results.csv  Linux_5_Tulips_sorted_results.csv  Windows_100_Artemis_sorted_results.csv  Windows_100_Tulips_sorted_results.csv  Windows_10_Artemis_sorted_results.csv  Windows_10_Tulips_sorted_results.csv  Windows_5_Artemis_sorted_results.csv  Windows_5_Tulips_sorted_results.csv  visualisation.py
src/GaussianBlur/src/: Controller.cpp  FileHandler.cpp
src/Grayscale/: CMakeLists.txt  grayscale.cpp
src/Grayscale/include/: Controller.hpp  FileHandler.hpp  Logger.hpp  OpenCLController.hpp
src/Grayscale/kernel/: grayscale.cl  grayscale_base.cl
src/Grayscale/results/: Linux_100_Artemis_sorted_results.csv  Linux_100_Tulips_sorted_results.csv  Linux_10_Artemis_sorted_results.csv  Linux_10_Tulips_sorted_results.csv  Linux_5_Artemis_sorted_results.csv  Linux_5_Tulips_sorted_results.csv  Windows_100_Artemis_sorted_results.csv  Windows_100_Tulips_sorted_results.csv  Windows_10_Artemis_sorted_results.csv  Windows_10_Tulips_sorted_results.csv  Windows_5_Artemis_sorted_results.csv  Windows_5_Tulips_sorted_results.csv  visualisation.py
src/Grayscale/src/: Controller.cpp  FileHandler.cpp  Logger.cpp
src/Grayscale_CPU/: CMakeLists.txt  grayscale_cpu.cpp
src/RealtimeImageProcessing/: CMakeLists.txt  RealtimeImageProcessing.cpp
src/RealtimeImageProcessing/results/: visualisation.py
src/RealtimeImageProcessing/src/: Comparator.cpp  Controller.cpp  FileHandler.cpp  Logger.cpp  ProgramHandler.cpp
